--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
         run: sudo apt-get install -y jq
 
       - name: Check Config Files
-        run: jq empty resources/good.json && jq empty resources/bad.json
+        run: jq empty config/good.json && jq empty config/bad.json
